# robot-dev-team

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  gitlab-connect  glab-usr  launch-uvicorn-dev  mypy.ini  pyproject.toml  ruff.toml
app/: __init__.py  main.py
app/api/: __init__.py  dashboard.py  webhooks.py
app/core/: __init__.py  config.py  logging.py
app/services/: __init__.py  agents.py  branch_pruning.py  branch_resolver.py  context_builder.py  dashboard.py  deduplication.py  git_runtime.py  glab.py  log_pruning.py  project_paths.py  routes.py  trigger_queue.py
config/: header_guard.toml.example  routes.yaml
docs/: ADDING_AN_AGENT.md  ADD_NEW_PROJECT.md  AGENT_ONBOARDING.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DEPENDENCY_MANAGEMENT.md  ENVIRONMENT.md  GITLAB_WEBHOOKS.md  GROUP_SETUP.md  ROUTES.md  SANITIZATION_REPORT.md  SYSTEM_DESIGN.md
gitlab/: .env.example  docker-compose.gitlab.yml  docker-entrypoint-rdt.sh  readme-gitlab.md  setup-gitlab.sh
prompts/: assign_work.txt  issue_review.txt  merge_request_review.txt  note_followup.txt  system_prompt.txt
scripts/: generate-sbom.sh  header_guard.py  install-claude.sh  install-codex.sh  install-gemini.sh
tests/: __init__.py  test_agents.py  test_branch_pruning.py  test_branch_resolver.py  test_config.py  test_context_builder.py  test_dashboard.py  test_glab.py  test_log_pruning.py  test_mention_hold.py  test_project_paths.py  test_routes.py  test_trigger_queue.py  test_webhooks.py
(+1 files in other folders)
